[package]
name = "typp-rust"
description = "Typp parser for Rust."
keywords = ["typp", "parser"]
version = "0.1.0"
authors = ["decaplanet <contact@decaplanet.com>"]
license = "MIT"
repository = "https://github.com/decaplanet/typp-rust"
edition = "2021"
exclude = ["tests/**/*", "*_tests.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
